# cmake_template

./: CMakeLists.txt  clean.sh
cmake/: kc_conf.cmake
res/: todo.md
src/: CMakeLists.txt  test_cJSON.c
